# visuomotor_policy_ros

./: CMakeList.txt  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: data_collection.launch  data_collection_ft.launch  online_running.launch  sensor_bringup.launch
scripts/: data_collector.py  data_collector_without_align.py  generate_training_dataset.py  gopro.py  online_running.py
src/: camera_test.py  gopro.py  gopro_test.py  usbreset.py
src/PyriteUtility/computer_vision/: computer_vision_utility.py
src/PyriteUtility/data_pipeline/: data_plotting.py  episode_data_buffer.py  franka_real_data_processing.py  indexing.py  read_zarr_data.py  real_data_processing.py
src/PyriteUtility/hardware_interface/: test_log_video.py
src/PyriteUtility/planning_control/: compliance_helpers.py  mpc.py  trajectory.py
src/PyriteUtility/pytorch_utils/: model_io.py
src/PyriteUtility/spatial_math/: spatial_utilities.py
src/data_process/: check_data_timestamp.py  data_visualizer.py  generate_training_dataset.py  reading_zarr_database.py  real_data_processing.py  sensor_output_episode_6.pkl.txt  sensor_output_episode_7.pkl.txt
src/diffusion_policy/common/: replay_buffer.py  replay_buffer_legacy.py  sampler.py
src/diffusion_policy/config/: train_conv_workspace.yaml  train_spec_workspace.yaml
src/diffusion_policy/config/task/: flip_up_conv.yaml  (+3 more)
src/diffusion_policy/dataset/: virtual_target_dataset.py
src/diffusion_policy/policy/: diffusion_unet_timm_mod1_policy.py
src/online_model_rollout/: common_format.py  model_io.py  policy_inference_utility.py
(+5 files in other folders)
