<?xml version="1.0"?>
<package format="2">
  <name>franka_data_collector</name>
  <version>0.0.1</version>
  <description>ROS package to collect data from Franka and camera</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>franka_msgs</depend>
  <depend>tf</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
